RESOLVED FIXED287899
rdar://145075545 (Queue messages sent with browser.test if we don't have any listeners setup)
https://bugs.webkit.org/show_bug.cgi?id=287899
Summary rdar://145075545 (Queue messages sent with browser.test if we don't have any ...
Elijah Sawyers
Reported 2025-02-18 14:40:33 PST
Attachments
Elijah Sawyers
Comment 1 2025-02-18 16:02:34 PST
EWS
Comment 2 2025-02-19 00:39:49 PST
Committed 290601@main (0e5ba8ab4eba): <https://commits.webkit.org/290601@main> Reviewed commits have been landed. Closing PR #40802 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.