rdar://145075545 (Queue messages sent with browser.test if we don't have any listeners setup) https://bugs.webkit.org/show_bug.cgi?id=287899 rdar://145075545

Reviewed by Timothy Hatcher.

This patch makes it so that we queue all messages sent with browser.test.sendMessage are
queued if there aren't currently any event listeners. We flush these queued messages
whenever the first listener is added.

This is useful if an extension starts sending test messages as soon as it's loaded, but
the listener isn't set up until later (e.g. in a content script that's injected later).

* Source/WebKit/UIProcess/Extensions/Cocoa/API/WebExtensionContextAPIEventCocoa.mm:
(WebKit::WebExtensionContext::addListener):
Increment the count of how many listeners we have for test messages. If it's the first
listener being added, flush the message queue.

(WebKit::WebExtensionContext::removeListener):
Decrement the count of how many listeners we have for test messages.

* Source/WebKit/UIProcess/Extensions/Cocoa/WebExtensionContextCocoa.mm:
(WebKit::WebExtensionContext::sendTestMessage):
If there aren't any test message listeners, queue the message.

(WebKit::WebExtensionContext::flushTestMessageQueueIfNeeded):
Send all of the queued test messages, if there are any.

* Source/WebKit/UIProcess/Extensions/WebExtensionContext.h:
Introduce all of the private state that we need to keep track of a test message queue.

(WebKit::WebExtensionContext::hasTestMessageEventListeners):
Return whether or not the context has any test message event listeners.

* Tools/TestWebKitAPI/Tests/WebKitCocoa/WKWebExtensionAPITest.mm:
(TestWebKitAPI::TEST(WKWebExtensionAPITest, SendMessageBeforeListenerAdded)):
Write a new test to ensure that this patch behaves as expected.

Canonical link: https://commits.webkit.org/290601@main